--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "lib": [
-      "DOM",
-      "ES6"
-    ],
+    "lib": ["DOM", "ES6"],
     "target": "es6",
+    "module": "es6",
     "rootDir": "src",
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
-      "@components/*":["data/components/*"]
+      "@components/*": ["data/components/*"]
     },
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "strict": true
-  }
+    "strict": true,
+    "moduleResolution": "node"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["jest.config.ts"]
 }
